syntax = "proto3";

package transport_catalogue;

import "graph.proto";

message RoutingSettings {
    int32 bus_wait_time = 1;
    double bus_velocity = 2;
}

message TransportRouter {
    RoutingSettings routing_settings = 1;
    Graph graph = 2;
    repeated RoutesInternalData routes_internal_data = 3;
    repeated string stop_names = 4;
}
